Update package.json with script for webpack and config webpack

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Front-end application to enter/remove money from a wallet",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "./node_modules/.bin/webpack-dev-server --content-base client --inline --hot"
   },
   "author": "Hamzah Chaudhary",
   "license": "MIT",
