--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-preset-stage-0": "^6.5.0",
     "path": "^0.12.7",
     "react": "^15.2.1",
+    "react-bootstrap": "^0.29.5",
     "react-dom": "^15.2.1",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
