--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
+    "immutable": "^3.8.1",
     "path": "^0.12.7",
     "react": "^15.2.1",
     "react-bootstrap": "^0.29.5",
