--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "./node_modules/.bin/webpack-dev-server --content-base client --inline --hot"
+    "dev": "./node_modules/.bin/webpack-dev-server --content-base client --inline --hot",
+    "prod": "NODE_ENV=production webpack"
   },
   "author": "Hamzah Chaudhary",
   "license": "MIT",
